# CodeInGame

./: .appveyor.yml  .codecov.yml  .travis.yml  CMakeLists.txt  README.md  README.txt
Defibrillators/: CMakeLists.txt  README.md
Defibrillators/src/: main.cpp
Defibrillators/tst/: completeFile.txt  completeFile2.txt  exactPosition.txt  example.txt
HorseRacingDuals/: CMakeLists.txt  README.md
HorseRacingDuals/src/: main.cpp
HorseRacingDuals/tst/: horsesInAnyOrderInput.txt  manyHorses.txt  simpleTestCaseInput.txt
Onboarding/: CMakeLists.txt  README.md
Onboarding/src/: main.cpp
